--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.8.3",
     "react-native": "^0.58.6",
     "react-native-image-picker": "^0.28.0",
+    "react-native-swiper": "^1.5.14",
     "react-navigation": "^3.3.2"
   },
   "devDependencies": {
